[theme] Fix scrollbar width.
Get rid of stale CSS blocks.

Fixes MB#6590

--- a/panels/applications/data/theme/panel.css
+++ b/panels/applications/data/theme/panel.css
@@ -1,14 +1,4 @@
 
-NbtkScrollView {
-  xthickness: 26;
-  ythickness: 26;
-}
-
-NbtkScrollBar {
-  background-color: #e7ebee;
-  padding: 3;
-}
-
 /* Launcher  */
 
 MnbLauncher > *#launcher-vbox {
